--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <div class="container">
         <img src="https://static.vecteezy.com/system/resources/thumbnails/002/732/188/small_2x/color-glossy-happy-birthday-balloons-banner-background-illustration-free-vector.jpg" alt="Balloons" class="balloon-img">
-        <h1>¡Feliz Cumple Fioree!</h1>
+        <h1 class="bradley-hand">¡Feliz Cumple Fioree!</h1>
         <div class="balloons">
             <img src="https://acdn.mitiendanube.com/stores/697/839/products/45146e0b-d14f-40ff-b973-f335576c4262-c4f7d504664934176517053435284790-1024-1024.jpeg" alt="Balloon" class="balloon" id="balloon1">
             <img src="https://acdn.mitiendanube.com/stores/697/839/products/45146e0b-d14f-40ff-b973-f335576c4262-c4f7d504664934176517053435284790-1024-1024.jpeg" alt="Balloon" class="balloon" id="balloon2">
             <img src="https://acdn.mitiendanube.com/stores/697/839/products/45146e0b-d14f-40ff-b973-f335576c4262-c4f7d504664934176517053435284790-1024-1024.jpeg" alt="Balloon" class="balloon" id="balloon3">
         </div>
-        <p>Espero que tu día este lleno de amor y felicidad :).</p>
-        <a href="sorpresa.html" class="surprise-link"><button>Hace clic aca</button></a>
+        <p>Espero que tu día esté lleno de amor y felicidad :).</p>
+        <a href="sorpresa.html" class="surprise-link"><button>Hace clic acá</button></a>
     </div>
 </body>
 </html>
