prueba de fondo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="https://acdn.mitiendanube.com/stores/697/839/products/45146e0b-d14f-40ff-b973-f335576c4262-c4f7d504664934176517053435284790-1024-1024.jpeg" alt="Balloon" class="balloon" id="balloon2">
             <img src="https://acdn.mitiendanube.com/stores/697/839/products/45146e0b-d14f-40ff-b973-f335576c4262-c4f7d504664934176517053435284790-1024-1024.jpeg" alt="Balloon" class="balloon" id="balloon3">
         </div>
-        <p>Espero que tu día esté lleno de amor y felicidad :).</p>
+        <p>Espero que tu día este lleno de amor y felicidad :)</p>
         <a href="sorpresa.html" class="surprise-link"><button>Hace clic acá</button></a>
     </div>
 </body>
